--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<style>
-    body{
-        background-color: aqua;
-    }
-    @media only screen and (max-width: 600px){
-        body {
+    <style>
+        body{
             background-color: green;
         }
-    }
-</style>
+        @media only screen and (max-width:600px){
+            body{
+                background-color: blue;
+            }
+        }
+    </style>
 </head>
-
-<body>
-
-    <p>Lorem ipsum dolor sit.</p>
+<body> <p>
+    Lorem ipsum dolor sit amet.
+</p>
     
 </body>
 </html>
